--- a/example_config.toml
+++ b/example_config.toml
@@ -7,6 +7,7 @@ gpg_dir = "/home/stephen/Downloads/aur/checkingGPG"
 logs_dir = "/home/stephen/Downloads/aur/logs"
 signing_gpg_dir = "/home/stephen/Downloads/aur/signingGPG"
 signing_gpg_key_fp = "04D9E3A2880F6418EC4BA70EA0F3F8FAA2088E62"
+editor = "/usr/bin/vim"
 ########## END OF MANDATORY VARIABLES
 
 # Each [[entry]] needs a "name".
