Impl setting build to fail/continue on limit
If "error_on_build" is set to "true" in the config, then the build will
fail if the "log_limit" is reached.

--- a/example_config.toml
+++ b/example_config.toml
@@ -18,6 +18,8 @@ is_timed = true
 is_log_timed = true
 # Default log_limit is 1 GiB
 log_limit = 1073741824
+# If true, then make the build fail if the limit is reached
+error_on_limit = false
 ########## END OF MANDATORY VARIABLES
 
 # Each [[entry]] needs a "name".
