Add comment about tmpfs in example_config.toml

--- a/example_config.toml
+++ b/example_config.toml
@@ -22,6 +22,8 @@ log_limit = 1073741824
 error_on_limit = false
 # If true, timestamps are in localtime. If false, timestamps are UTC.
 datetime_in_local_time = true
+# If true, all builds will be done in a tmpfs. Recommended to have a lot of RAM and/or swap.
+tmpfs = false
 ########## END OF MANDATORY VARIABLES
 
 # Each [[entry]] needs a "name".
