--- a/example_config.toml
+++ b/example_config.toml
@@ -24,6 +24,8 @@ error_on_limit = false
 datetime_in_local_time = true
 # If true, all builds will be done in a tmpfs. Recommended to have a lot of RAM and/or swap.
 tmpfs = false
+# If true, only packages to be built will be printed when USR1 is signaled.
+print_state_info_only_building_sigusr1 = true
 ########## END OF MANDATORY VARIABLES
 
 # Each [[entry]] needs a "name".
