--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,10 +2,13 @@ site_name: Docs for AnotherAURHelper
 theme:
     name: mkdocs
     color_mode: dark
-    user_color_mode_toggle: true
+    user_color_mode_toggle: false
+    highlightjs: false
 markdown_extensions:
   - admonition
   - codehilite
 nav:
   - Home: index.md
   - Setup with LXC: setup_lxc.md
+extra_css:
+  - monokai.css
