Add docs for key_handling

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,5 +10,6 @@ markdown_extensions:
 nav:
   - Home: index.md
   - Setup with LXC: setup_lxc.md
+  - Repo Key Handling: key_handling.md
 extra_css:
   - monokai.css
