"full_link_cargo_registry", restore config.toml
Add per-package option "full_link_cargo_registry" that will bind mount
$HOME/.cargo/ of the build user into /build/.cargo/ (in the build
chroot).

Note that "link_cargo_registry" only bind mounted $HOME/.cargo/git and
$HOME/.cargo/registry to /build/.cargo/git and /build/.cargo/registry .

Now requires "temporary_files_dir" in the config.toml for update.py
(AnotherAURHelper).

Now copies $HOME/.cargo/config.toml to "temporary_files_dir", and
restores it on program exit using Python's "atexit".

--- a/example_config.toml
+++ b/example_config.toml
@@ -28,6 +28,8 @@ tmpfs = false
 print_state_info_only_building_sigusr1 = true
 # The path to the persistent state.
 persistent_state_db = "/home/stephen/aur_helper_state.db"
+# A directory to hold temporary files
+temporary_files_dir = "/home/stephen/temp/run"
 ########## END OF MANDATORY VARIABLES
 
 # Each [[entry]] needs a "name".
